speed improvement due to removing unneeded logging and switching to log4j2